...
            "state" : "translated",
            "value" : "資料庫"
          }
        }
      }
    },
    "Listen Now" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Listen Now"
          }
...
            "state" : "translated",
            "value" : "正在播放"
          }
        }
      }
    },
    "Now Playing" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Now Playing"
          }
...
            "state" : "translated",
            "value" : "密碼"
          }
        }
      }
    },
    "Pause" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
...
            "state" : "translated",
            "value" : "暫停電台"
          }
        }
      }
    },
    "Play" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play"
          }
...
            "state" : "translated",
            "value" : "即將播放"
          }
        }
      }
    },
    "Playing Next" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Playing Next"
          }
...
            "state" : "translated",
            "value" : "公開的歌單將對所有人可見"
          }
        }
      }
    },
    "Queue" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Queue"
          }
...
            "state" : "translated",
            "value" : "掃描網頁端登入行動條碼"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
...
